change back to minmax

--- a/dtree.ipynb
+++ b/dtree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "max    100.000000  850.000000   68.200000   40.000000"
       ]
      },
-     "execution_count": 552,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "4  40.0  NaN    Canadian Mist  "
       ]
      },
-     "execution_count": 553,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "8    54.0      USA  Blended   20.0  40.0"
       ]
      },
-     "execution_count": 555,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,40 +417,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Z-score Normalization"
+    "# From phase 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def outlier(x):\n",
+    "    q1, q3 = np.percentile(x,[25, 75])\n",
+    "    iqr = q3 - q1\n",
+    "    cut = 1.5 * iqr  \n",
+    "    return [i for i in range(x.shape[0]) if x[i] < q1-cut or x[i]>q3+cut]\n",
+    "\n",
+    "def all_out(x):\n",
+    "    idx = []\n",
+    "    for i in range(x.shape[1]):\n",
+    "        idx = np.concatenate((idx, outlier(x[:,i])))\n",
+    "    return list(set(idx))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-4.19625574 -2.51556861 -1.11351642 -0.76748881 -0.77360483]\n",
-      " [-3.54854261 -0.7667776  -1.11351642 -0.63637251 -0.77360483]\n",
-      " [-3.45601217 -2.51556861 -1.11351642 -0.73172982 -0.77360483]\n",
-      " ...\n",
-      " [ 1.26304059  0.98201341 -0.91763396  0.07880732  2.98494819]\n",
-      " [ 1.35557104 -0.7667776   1.23707304 -0.01654999  0.25145508]\n",
-      " [ 1.35557104  0.10761791  0.06177831  1.09197874 -0.26107488]]\n"
+      "49 [0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 132.0, 259.0, 133.0, 141.0, 256.0, 143.0, 257.0, 155.0, 156.0, 158.0, 159.0, 160.0, 162.0, 46.0, 174.0, 176.0, 51.0, 59.0, 60.0, 67.0, 195.0, 197.0, 199.0, 202.0, 208.0, 80.0, 210.0, 213.0, 214.0, 89.0, 220.0, 97.0, 227.0, 100.0, 229.0, 232.0, 254.0, 125.0, 126.0]\n",
+      "(211, 5)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:590: DataConversionWarning: Data with input dtype object was converted to float64 by StandardScaler.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n",
-      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:590: DataConversionWarning: Data with input dtype object was converted to float64 by StandardScaler.\n",
+      "C:\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: DeprecationWarning: using a non-integer array as obj in delete will result in an error in the future\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
+   "source": [
+    "idx = all_out(data)\n",
+    "print(len(idx),idx)\n",
+    "data = np.delete(data, idx, axis=0)\n",
+    "print(data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Min-Max Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.         0.         0.14728682 0.234375  ]\n",
+      " [0.         0.5        0.         0.06976744 0.234375  ]\n",
+      " [0.02777778 0.5        0.         0.10077519 0.234375  ]\n",
+      " ...\n",
+      " [0.97222222 1.         0.07142857 0.36434109 0.9375    ]\n",
+      " [0.97222222 0.75       0.57142857 0.53488372 0.97395833]\n",
+      " [1.         0.5        0.85714286 0.47286822 0.546875  ]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:590: DataConversionWarning: Data with input dtype object was converted to float64 by MinMaxScaler.\n",
       "  warnings.warn(msg, DataConversionWarning)\n"
      ]
     }
    ],
    "source": [
-    "data = StandardScaler().fit_transform(data)\n",
+    "data = MinMaxScaler().fit_transform(data)\n",
     "print(data)"
    ]
   },
@@ -463,23 +516,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-4.196255737295553 1.3555710375166459 5.551826774812199\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"rate_min = data[:,0].min()\\nrate_max = data[:,0].max()\\nrate_range = rate_max - rate_min\\nprint(rate_min, rate_max, rate_range)\\nlabel = np.array(['low' if d <= rate_min+rate_range/3  else 'medium' if d <= rate_min+2*rate_range/3 else 'high' for d in data[:,0]])\""
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "rate_min = data[:,0].min()\n",
+    "\"\"\"rate_min = data[:,0].min()\n",
     "rate_max = data[:,0].max()\n",
     "rate_range = rate_max - rate_min\n",
     "print(rate_min, rate_max, rate_range)\n",
-    "label = np.array(['low' if d <= rate_min+rate_range/3  else 'medium' if d <= rate_min+2*rate_range/3 else 'high' for d in data[:,0]])"
+    "label = np.array(['low' if d <= rate_min+rate_range/3  else 'medium' if d <= rate_min+2*rate_range/3 else 'high' for d in data[:,0]])\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label = np.array(['low' if d <= 1/3  else 'medium' if d <= 2/3 else 'high' for d in data[:,0]])"
    ]
   },
   {
@@ -491,15 +556,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(208, 4) (208,)\n",
-      "(52, 4) (52,)\n"
+      "(168, 4) (168,)\n",
+      "(43, 4) (43,)\n"
      ]
     }
    ],
@@ -507,7 +572,7 @@
     "x = data[:,1:]\n",
     "y = label\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=2525,test_size=0.2, shuffle=True)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y,test_size=0.2, shuffle=True)\n",
     "print(x_train.shape, y_train.shape)\n",
     "print(x_test.shape, y_test.shape)"
    ]
@@ -522,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +601,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 561,
+     "execution_count": 335,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 579,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,25 +636,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 high low\n",
-      "5 high medium\n",
-      "8 high medium\n",
-      "17 high medium\n",
-      "18 medium high\n",
-      "24 high medium\n",
-      "26 high medium\n",
-      "29 medium high\n",
-      "42 high medium\n",
-      "46 high medium\n",
-      "47 high low\n",
-      "acc: 0.7884615384615384\n"
+      "0 medium high\n",
+      "4 medium low\n",
+      "7 medium high\n",
+      "8 low high\n",
+      "10 high medium\n",
+      "15 medium high\n",
+      "18 low medium\n",
+      "19 medium high\n",
+      "21 high medium\n",
+      "35 medium low\n",
+      "36 high medium\n",
+      "40 high medium\n",
+      "acc: 0.7209302325581395\n"
      ]
     }
    ],
@@ -613,14 +679,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "actual: [2, 8, 42]\n"
+      "actual: [3, 22, 18]\n"
      ]
     }
    ],
@@ -645,14 +711,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predict of cart: [0, 3, 49]\n"
+      "predict of cart: [3, 23, 17]\n"
      ]
     }
    ],
@@ -670,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -745,21 +811,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>low</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>medium</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>high</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -767,12 +833,12 @@
       ],
       "text/plain": [
        "        low  medium  high\n",
-       "low       0       0     2\n",
-       "medium    0       1     7\n",
-       "high      0       2    40"
+       "low       1       2     0\n",
+       "medium    1      17     4\n",
+       "high      1       4    13"
       ]
      },
-     "execution_count": 569,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -799,22 +865,14 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         low       0.00      0.00      0.00         2\n",
-      "      medium       0.33      0.12      0.18         8\n",
-      "        high       0.82      0.95      0.88        42\n",
+      "         low       0.33      0.33      0.33         3\n",
+      "      medium       0.74      0.77      0.76        22\n",
+      "        high       0.76      0.72      0.74        18\n",
       "\n",
-      "   micro avg       0.79      0.79      0.79        52\n",
-      "   macro avg       0.38      0.36      0.35        52\n",
-      "weighted avg       0.71      0.79      0.74        52\n",
+      "   micro avg       0.72      0.72      0.72        43\n",
+      "   macro avg       0.61      0.61      0.61        43\n",
+      "weighted avg       0.72      0.72      0.72        43\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
@@ -832,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 571,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +904,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 571,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,27 +925,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 high medium\n",
-      "1 high low\n",
-      "3 medium high\n",
-      "5 high medium\n",
-      "8 high medium\n",
-      "10 medium high\n",
-      "17 high medium\n",
-      "18 medium high\n",
-      "24 high medium\n",
-      "26 high medium\n",
-      "41 low high\n",
-      "46 high medium\n",
-      "47 high low\n",
-      "acc: 0.75\n"
+      "0 medium high\n",
+      "4 high low\n",
+      "5 low medium\n",
+      "7 medium high\n",
+      "8 medium high\n",
+      "10 high medium\n",
+      "15 medium high\n",
+      "18 low medium\n",
+      "19 medium high\n",
+      "21 high medium\n",
+      "35 medium low\n",
+      "36 high medium\n",
+      "40 high medium\n",
+      "acc: 0.6976744186046512\n"
      ]
     }
    ],
@@ -904,14 +962,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predict of c4.5: [1, 4, 47]\n"
+      "predict of c4.5: [3, 22, 18]\n"
      ]
     }
    ],
@@ -929,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -981,21 +1039,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>low</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>medium</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>high</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1003,12 +1061,12 @@
       ],
       "text/plain": [
        "        low  medium  high\n",
-       "low       0       0     2\n",
-       "medium    0       1     7\n",
-       "high      1       3    38"
+       "low       1       1     1\n",
+       "medium    2      16     4\n",
+       "high      0       5    13"
       ]
      },
-     "execution_count": 577,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -1028,13 +1086,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         low       0.00      0.00      0.00         2\n",
-      "      medium       0.25      0.12      0.17         8\n",
-      "        high       0.81      0.90      0.85        42\n",
+      "         low       0.33      0.33      0.33         3\n",
+      "      medium       0.73      0.73      0.73        22\n",
+      "        high       0.72      0.72      0.72        18\n",
       "\n",
-      "   micro avg       0.75      0.75      0.75        52\n",
-      "   macro avg       0.35      0.34      0.34        52\n",
-      "weighted avg       0.69      0.75      0.72        52\n",
+      "   micro avg       0.70      0.70      0.70        43\n",
+      "   macro avg       0.59      0.59      0.59        43\n",
+      "weighted avg       0.70      0.70      0.70        43\n",
       "\n"
      ]
     }
@@ -1043,6 +1101,13 @@
     "text_report_c45 = sklearn.metrics.classification_report(y_test, y_predict_c45, labels=labels)\n",
     "print(text_report_c45)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
